--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <h1>Adventure</h1>
+    <header>
+        <h1>Expedition</h1>
+    </header>
+    <div class="container">
+        <main>
+
+        </main>
+    </div>
+    <footer>
+        Made with Love @ Udacity
+    </footer>
+    
     
 
     <script src="js/app.js"></script>
