--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <h1>Adventure</h1>
+    <header>
+        <h1>Expeditions</h1>
+    </header>
+    <div class="container">
+        <main>
+
+        </main>
+    </div>
+
+   <!-- Start of new content -->
+    <aside>
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Nulla, dolor consequatur velit repellendus accusantium enim!</p>
+    </aside>
+    <!-- End of new content -->
+
+    <footer>
+        made with love @ Udaccity
+    </footer>
+    
     
 
     <script src="js/app.js"></script>
