Added about me paragraph

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Nulla, dolor consequatur velit repellendus accusantium enim!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eligendi veritatis quis necessitatibus ipsum repellat impedit assumenda voluptatum, 
+            voluptatem quaerat animi voluptates, cupiditate, voluptatibus illo.</p>
     </aside>
     <!-- End of new content -->
 
