Added Social links to the footer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
     </div>
     <footer>
         Made with Love @ Udacity
+        <!-- Start of new content -->
+        <section>
+            <h3 class="visuallyHidden">Social Links</h3>
+            <a href="https://twitter.com/udacity" class="social-link">
+                <img src="img/social-twitter.png" alt="twitter">
+            </a>
+            <a href="https://www.instagram.com/udacity" class="social-link">
+                <img src="img/social-instagram.png" alt="Instagram"> 
+            </a>
+            <a href="https://plus.google.com/+Udacity" class="social-link">
+                <img src="img/social-google.png" alt="Google Plus">
+            </a>
+        </section>
     </footer>
     
     
